--- a/src/app/weather/components/search/search.component.html
+++ b/src/app/weather/components/search/search.component.html
@@ -1,11 +1,12 @@
-<form class="form-inline mb-5">
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()" class="form-inline mb-5">
   <div class="form-group col-8 pl-0">
     <input class="form-control mt-3 col"
            id="city"
            name="city"
-           placeholder="City"
+           placeholder="Please enter a city"
+           [formControlName]="'searchQuery'"
            type="text"
            required>
   </div>
-  <button class="btn-search btn btn-primary mt-3 col-4" type="submit" (click)="search()">Search</button>
+  <button class="btn-search btn btn-primary mt-3 col-4" type="submit" [disabled]="formGroup.invalid">Search</button>
 </form>
